# Velora

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  INTERVIEW_GUIDE.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_request_tracking.py  003_user_api_keys.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: admin.py  analytics.py  api_keys.py  auth.py  cache.py  chat.py  health.py  organizations.py  providers.py  requests.py  router.py  settings.py  user_keys.py  users.py
backend/app/background/: __init__.py  health_checker.py
backend/app/cache/: __init__.py  client.py  keys.py
backend/app/core/: __init__.py  constants.py  context.py  exceptions.py  logging.py  rbac.py  security.py
backend/app/database/: __init__.py  base.py  engine.py  session.py
backend/app/dependencies/: __init__.py  auth.py  database.py  redis.py  router.py
backend/app/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py  security_headers.py  timing.py
backend/app/models/: __init__.py  api_key.py  membership.py  organization.py  provider_status.py  request.py  session.py  user.py  user_api_key.py  user_settings.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  registry.py
backend/app/repositories/: __init__.py  api_key_repository.py  base.py  membership_repository.py  organization_repository.py  request_repository.py  session_repository.py  user_repository.py  user_settings_repository.py
backend/app/schemas/: __init__.py  admin.py  analytics.py  api_key.py  auth.py  cache.py  chat.py  common.py  organization.py  provider.py  request.py  settings.py  user.py  user_key.py
backend/app/services/: __init__.py  admin_service.py  analytics_service.py  api_key_service.py  auth_service.py  cache_service.py  chat_service.py  cost_service.py  health_service.py  organization_service.py  rate_limit_service.py  request_logger.py  router_service.py  session_service.py  settings_service.py  user_key_service.py  user_service.py
backend/app/telemetry/: __init__.py  setup.py
backend/app/utils/: __init__.py  pagination.py  response.py  retry.py
backend/scripts/: create_initial_migration.sh
backend/tests/: __init__.py  conftest.py
backend/tests/factories/: __init__.py
backend/tests/integration/: __init__.py  test_api_keys_api.py  test_auth_api.py  test_chat_api.py  test_health.py  test_organizations_api.py
backend/tests/unit/: test_analytics_service.py  test_auth_service.py  test_cache_keys.py  test_cache_service.py  test_cost_service.py  test_providers.py  test_rate_limit_service.py  test_rbac.py  test_request_logger.py  test_router_service.py  test_security.py
frontend/: .env.local.example  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/admin/: page.tsx
frontend/app/(dashboard)/analytics/: page.tsx
frontend/components/: query-provider.tsx
frontend/components/analytics/: charts.tsx
frontend/components/layout/: footer.tsx  sidebar.tsx  topbar.tsx
frontend/components/playground/: chat-message.tsx  markdown-renderer.tsx  provider-selector.tsx  routing-decision-card.tsx  strategy-selector.tsx
frontend/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  input.tsx  velora-logo.tsx
frontend/hooks/: use-toast.ts  useAnalytics.ts  useApiKeys.ts  useRequests.ts
frontend/lib/: api.ts  streaming.ts  utils.ts
frontend/public/: placeholder.txt
frontend/store/: auth.ts  playground.ts
frontend/tests/: utils.test.ts
frontend/types/: index.ts
(+8 files in other folders)
